# newsletter-app-backend

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20231010184520-34193f62d191-user_models.py  20231013145513-a39967e80a86-user_models.py
newsletter_backend/: __main__.py  app.py  config.py  database.py  dependencies.py  exceptions.py  models.py
newsletter_backend/routes/: auth_route.py
newsletter_backend/schemas/: auth_schema.py  user_schema.py
newsletter_backend/services/: auth_service.py  user_service.py
newsletter_backend/utils/: security.py
scripts/: format.sh  makemigrations.sh  migrate.sh
