[tool.poetry]
name = "newsletter-backend"
version = "0.1.0"
description = ""
authors = ["Peter Karolyi <peter@karolyi.dev>"]
packages = [{ include = "newsletter_backend" }]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.21"
httpx = "^0.25.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
